<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.donanobispacem.biddingdb.BidDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/contractor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/contractor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/preprocurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/preprocurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/prebidding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/prebidding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/bidding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/bidding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/postqualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/postqualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/noa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/noa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/ntp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/ntp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:text="@string/addtl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/addtl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:text="@string/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

    </LinearLayout>

</ScrollView>
